<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".views.RegistrationActivity">

    <ImageView
        android:id="@+id/activity_registration_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_oct"
        android:layout_marginBottom="@dimen/margin_quad"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_app_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_registration_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_quad"
            android:paddingEnd="@dimen/margin_quad">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputEditTextStyle"
                android:layout_marginBottom="@dimen/margin_triple">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_registration_et_email"
                    style="@style/LoginTextInputEditTextStyle"
                    android:hint="@string/hint_email"
                    android:textColorHint="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputEditTextStyle"
                android:layout_marginBottom="@dimen/margin_triple">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_registration_et_password"
                    style="@style/LoginTextInputEditTextStyle"
                    android:hint="@string/hint_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputEditTextStyle"
                android:layout_marginBottom="@dimen/margin_triple">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_registration_et_confirm_password"
                    style="@style/LoginTextInputEditTextStyle"
                    android:hint="@string/hint_confirm_password"
                    android:textColorHint="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/activity_registration_btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_double"
                android:background="@drawable/background_rounded_white"
                android:paddingStart="@dimen/margin_quad"
                android:paddingEnd="@dimen/margin_quad"
                android:text="@string/command_create_account"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_double" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_quad">

                <TextView
                    android:id="@+id/activity_registration_tv_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_have_an_account"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_triple" />

                <TextView
                    android:id="@+id/activity_registration_tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/activity_registration_tv_hint"
                    android:paddingStart="@dimen/margin_single"
                    android:paddingEnd="0dp"
                    android:text="@string/command_login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_triple"
                    android:textStyle="bold" />

            </RelativeLayout>

            <Button
                android:id="@+id/activity_registration_btn_sign_in_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_double"
                android:background="@drawable/background_rounded_blue"
                android:drawableStart="@drawable/ic_facebook_logo_white"
                android:paddingStart="@dimen/margin_quad"
                android:paddingEnd="@dimen/margin_quad"
                android:text="@string/login_facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_double" />

            <Button
                android:id="@+id/activity_registration_btn_sign_in_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_white"
                android:drawableStart="@drawable/ic_google_logo"
                android:paddingStart="@dimen/margin_quad"
                android:paddingEnd="@dimen/margin_quad"
                android:text="@string/login_google"
                android:textAllCaps="false"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_double" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>